cpq301-capstone/force-app/main/default/objects/Partner_Level_Discount__c/fields/Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount__c</fullName>
    <label>Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>