cpq301-capstone/force-app/main/default/objects/Partner_Level_Discount__c/fields/Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Partner_Level__c</fullName>
    <label>Partner Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>