cpq301-capstone/force-app/main/default/objects/Partner_Level_Discount__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>