cpq301-capstone/force-app/main/default/objects/Partner_Level_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Level__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Partner_Discount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>